--- a/mine/index.html
+++ b/mine/index.html
@@ -191,7 +191,7 @@ document.addEventListener('pjax:send', () => {
 <h1 id="需要联系我？"><a class="header-anchor" href="#需要联系我？"></a>需要联系我？</h1>
 <ul>
 <li>可以 <strong><a target="_blank" rel="noopener" href="https://www.baidu.com/">点击链接</a></strong> 前往百度私信我</li>
-<li>使用邮箱：<a href="mailto:Forgetmenot314@163.com" target="_blank">cy.Forgetmenot314@163.com</a> 联系我</li>
+<li>使用邮箱：<a href="mailto:Forgetmenot314@163.com" target="_blank">Forgetmenot314@163.com</a> 联系我</li>
 <li><s>还可以在 <strong>本站的留言板留言</strong>，但我并没有开通实时提醒，因此消息回复可能比较慢（已关闭留言板功能）</s></li>
 </ul>
 <hr>
