--- a/index.html
+++ b/index.html
@@ -840,17 +840,6 @@
                             </div>
                             <div class="content">Spring 四十九讲中第卌三讲到第卌九讲，杂项。</div>
                         </div>
-                    </div>
-                    <nav id="pagination">
-                        <div class="pagination">
-                            <span class="page-number current">1</span>
-                            <a class="page-number" href="/page/2/#content-inner">2</a>
-                            <span class="space">&hellip;</span>
-                            <a class="page-number" href="/page/12/#content-inner">12</a>
-                            <a class="extend next" rel="next" href="/page/2/#content-inner">
-                                <i class="fas fa-chevron-right fa-fw"></i>
-                            </a>
-                        </div>
                     </nav>
                 </div>
                 <div class="aside-content" id="aside-content">
@@ -909,7 +898,7 @@
     <font style="color:red">严禁未遵循规范的转载。</font>
 </strong>
 😡</br><strong>由于腾讯云相关策略的修改，本站无力支撑非免费的评论系统，决定关闭本站的评论功能。</strong>
-如需联系，请使用哔哩哔哩私信或邮箱。🧐</div></div>
+如需联系，请使用百度或邮箱。🧐</div></div>
 <div class="sticky_layout">
     <div class="card-widget card-recent-post">
         <div class="item-headline">
