--- a/index.html
+++ b/index.html
@@ -840,6 +840,17 @@
                             </div>
                             <div class="content">Spring 四十九讲中第卌三讲到第卌九讲，杂项。</div>
                         </div>
+                    </div>
+                    <nav id="pagination">
+                        <div class="pagination">
+                            <span class="page-number current">1</span>
+                            <a class="page-number" href="/page/2/#content-inner">2</a>
+                            <span class="space">&hellip;</span>
+                            <a class="page-number" href="/page/12/#content-inner">12</a>
+                            <a class="extend next" rel="next" href="/page/2/#content-inner">
+                                <i class="fas fa-chevron-right fa-fw"></i>
+                            </a>
+                        </div>
                     </nav>
                 </div>
                 <div class="aside-content" id="aside-content">
