--- a/index.html
+++ b/index.html
@@ -465,10 +465,10 @@
                         <span id="subtitle"></span>
                     </div>
                     <div id="site_social_icons">
-                        <a class="social-icon" href="https://github.com/BYjintian212" target="_blank" title="Github">
+                        <a class="social-icon" href="https://github.com/BYjintian" target="_blank" title="Github">
                             <i class="fab fa-github" style="color: #24292e;"></i>
                         </a>
-                        <a class="social-icon" href="mailto:cy.Forgetmenot314@163.com" target="_blank" title="邮箱">
+                        <a class="social-icon" href="mailto:Forgetmenot314@163.com" target="_blank" title="邮箱">
                             <i class="fas fa-envelope" style="color: #24292e;"></i>
                         </a>
                         <a class="social-icon" href="/atom.xml" target="_blank" title="RSS链接">
@@ -526,9 +526,9 @@
                     <div class="card-widget card-info">
                         <div class="is-center">
                             <div class="avatar-img">
-                                <img src="https://BYjintian-blog-pics.oss-cn-chengdu.aliyuncs.com/myblog/avatar.jpg" onerror="this.onerror=null;this.src='/img/friend_404.gif'" alt="avatar"/>
+                                <img src="/img/DMtouxiang.jpg" onerror="this.onerror=null;this.src='/img/friend_404.gif'" alt="avatar"/>
                             </div>
-                            <div class="author-info__name">BYjintian</div>
+                            <div class="author-info__name">BY jintian</div>
                             <div class="author-info__description">有生之年，狭路相逢，终不能幸免</div>
                         </div>
                         <div class="card-info-data site-data is-center">
