--- a/index.html
+++ b/index.html
@@ -532,17 +532,17 @@
                             <div class="author-info__description">有生之年，狭路相逢，终不能幸免</div>
                         </div>
                         <div class="card-info-data site-data is-center">
-                            <a href="/archives/">
-                                <div class="headline">文章</div>
-                                <div class="length-num">135</div>
-                            </a>
-                            <a href="/tags/">
-                                <div class="headline">标签</div>
-                                <div class="length-num">46</div>
-                            </a>
                             <a href="/categories/">
-                                <div class="headline">分类</div>
-                                <div class="length-num">27</div>
+                                <div class="headline">文章</div>
+                                <div class="length-num">314</div>
+                            </a>
+                            <a href="/milestones/">
+                                <div class="headline">里程碑</div>
+                                <div class="length-num">145</div>
+                            </a>
+                            <a href="/mine/">
+                                <div class="headline">关于</div>
+                                <div class="length-num">201</div>
                             </a>
                         </div>
                         <a id="card-info-btn" target="_blank" rel="noopener" href="https://www.bilibili.com/">
