--- a/index.html
+++ b/index.html
@@ -541,7 +541,7 @@
                                 <div class="length-num">145</div>
                             </a>
                             <a href="/mine/">
-                                <div class="headline">关于</div>
+                                <div class="headline">关于我</div>
                                 <div class="length-num">201</div>
                             </a>
                         </div>
