--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0,viewport-fit=cover">
-        <title>BY JINTIAN - 今天</title>
-        <meta name="author" content="今天,cy.Forgetmenot314@163.com">
+        <title>BY 今天</title>
+        <meta name="author" content="今天,Forgetmenot314@163.com">
         <meta name="copyright" content="BY 今天">
         <meta name="format-detection" content="telephone=no">
         <meta name="theme-color" content="#ffffff">
@@ -625,7 +625,7 @@
 </div></main>
 <footer id="footer">
     <div id="footer-wrap">
-        <div class="copyright">&copy;2020 - 2023 By jintian</div>
+        <div class="copyright">&copy;2023 By jintian</div>
         <div class="framework-info">
             <span>框架 </span>
             <a target="_blank" rel="noopener" href="https://hexo.io">Hexo</a>
