--- a/404.html
+++ b/404.html
@@ -1,6 +1,6 @@
-<!DOCTYPE html><html lang="zh-CN" data-theme="light"><head><meta charset="UTF-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width, initial-scale=1.0,viewport-fit=cover"><title>页面没有找到 | BY JINTIAN</title><meta name="author" content="Bye jintian,cy.Forgetmenot314@163.com"><meta name="copyright" content="Bye jintian"><meta name="format-detection" content="telephone=no"><meta name="theme-color" content="#ffffff"><meta name="description" content="彩笔的打怪升级之路...">
+<!DOCTYPE html><html lang="zh-CN" data-theme="light"><head><meta charset="UTF-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width, initial-scale=1.0,viewport-fit=cover"><title>页面没有找到 | BY JINTIAN</title><meta name="author" content="Bye jintian,cy.Forgetmenot314@163.com"><meta name="copyright" content="Bye jintian"><meta name="format-detection" content="telephone=no"><meta name="theme-color" content="#ffffff"><meta name="description" content="不要问光之战士，那么黑暗的问题">
 <meta property="og:type" content="website">
-<meta property="og:title" content="BY JINTIAN">
+<meta property="og:title" content="BY jintian">
 <meta property="og:url" content="https://BYjintian.github.io/404.html">
 <meta property="og:site_name" content="BY JINTIAN">
 <meta property="og:description" content="不要问光之战士，那么黑暗的问题">
