--- a/mine/index.html
+++ b/mine/index.html
@@ -195,7 +195,7 @@ document.addEventListener('pjax:send', () => {
 <li><s>还可以在 <strong>本站的留言板留言</strong>，但我并没有开通实时提醒，因此消息回复可能比较慢（已关闭留言板功能）</s></li>
 </ul>
 <hr>
-<p>感谢你看到这，希望有一天我也可以独当一面，成为别人家的孩子。</p>
+<p>这一切都是命运石之门的选择。</p>
 <p>终身学习，不断进步！</p>
 <hr class="footnotes-sep">
 <section class="footnotes">
