--- a/index.html
+++ b/index.html
@@ -579,6 +579,16 @@
 </strong>
 😡</br><strong>由于腾讯云相关策略的修改，本站无力支撑非免费的评论系统，决定关闭本站的评论功能。</strong>
 如需联系，请使用百度或邮箱。🧐</div></div>
+                      </div>
+                        <div class="card-widget card-map">
+                            <div class="card-content">
+                                <div class="item-headline">
+                                    <i class="fas iconfont icon-ditu" aria-hidden="true"></i>
+                                    <span>访客地图</span>
+                                </div>
+                                <script id="clstr_globe" type="text/javascript" defer="defer" src="//rf.revolvermaps.com/0/0/8.js?i=5gj9bj2cwrq&amp;amp;m=0&amp;amp;c=ff0000&amp;amp;cr1=ffffff&amp;amp;f=arial&amp;amp;l=33"></script>
+                            </div>
+                        </div>
 <div class="sticky_layout">
     <div class="card-widget card-recent-post">
         <div class="item-headline">
