--- a/index.html
+++ b/index.html
@@ -549,7 +549,8 @@
     <font style="color:red">严禁未遵循规范的转载。</font>
 </strong>
 😡</br><strong>由于腾讯云相关策略的修改，本站无力支撑非免费的评论系统，决定关闭本站的评论功能。</strong>
-如需联系，请使用百度或邮箱。🧐</div></div>
+如需联系，请使用百度或邮箱。🧐</div>
+</div>
 <div class="sticky_layout">
     <div class="card-widget card-recent-post">
         <div class="item-headline">
