--- a/index.html
+++ b/index.html
@@ -570,7 +570,7 @@
                 </div>
             </div>
             <div class="webinfo-item">
-                <div class="item-name">本站总字数 :</div>
+                <div class="item-name">本站总字数 : 1123.6k</div>
                 <div class="item-count">1123.6k</div>
             </div>
             <div class="webinfo-item">
