--- a/index.html
+++ b/index.html
@@ -550,12 +550,10 @@
 </strong>
 😡</br><strong>由于腾讯云相关策略的修改，本站无力支撑非免费的评论系统，决定关闭本站的评论功能。</strong>
 如需联系，请使用百度或邮箱。🧐</div>
-</div>
-<div class="sticky_layout">
-    <div class="card-widget card-recent-post">
+    </div>
+    <div class="card-widget card-webinfo">
         <div class="item-headline">
-            <i class="fas fa-history"></i>
-            <i class="fas fa-folder-open"></i>
+            <i class="fas fa-chart-line"></i>
             <span>网站资讯</span>
         </div>
         <div class="webinfo">
@@ -570,7 +568,7 @@
                 </div>
             </div>
             <div class="webinfo-item">
-                <div class="item-name">本站总字数 : 1123.6k</div>
+                <div class="item-name">本站总字数 : 123456k</div>
                 <div class="item-count">1123.6k</div>
             </div>
             <div class="webinfo-item">
@@ -580,8 +578,7 @@
                 </div>
             </div>
             <div class="webinfo-item">
-                <div class="item-name">本站总访问量 :
-                </div>
+                <div class="item-name">本站总访问量 :</div>
                 <div class="item-count" id="busuanzi_value_site_pv">
                     <i class="fa-solid fa-spinner fa-spin"></i>
                 </div>
