--- a/index.html
+++ b/index.html
@@ -619,15 +619,15 @@
                             <span>公告</span>
                         </div>
                         <div class="announcement_content">
-                            本站所有博文均是博主的学习笔记与个人理解。
+                            本站为个人学习使用，不对外开放，博文少量为博主撰写，其余博文均为转载。
                             <strong>
                                 <font style="color:red">除特别注明外，</font>
-                                如需转载，请在文章头部醒目处附带原文链接并<a href="https://BYjintian.github.io/mine/" style="color:#49B1F5;text-decoration:underline">告知我</a>
+                                如需转载，请在文章中附上链接并<a href="https://BYjintian.github.io/mine/" style="color:#49B1F5;text-decoration:underline">告知我</a>
                             </strong>
                             你将转载。😊
 </br>
 <strong>
-    <font style="color:red">严禁未遵循规范的转载。</font>
+    <font style="color:red">网站不对外开放，误入的朋友请不要告知他人或分享。</font>
 </strong>
 😡</br><strong>由于腾讯云相关策略的修改，本站无力支撑非免费的评论系统，决定关闭本站的评论功能。</strong>
 如需联系，请使用百度或邮箱。🧐</div>
