--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
             </div>
         </div>
         <div class="page" id="body-wrap">
-            <header class="full_page" id="page-header" style="background-image: url('/img/siteCover.png')">
+            <header class="full_page" id="page-header" style="background-image: url('https://cdn.jsdelivr.net/gh/BYjintian/tc@main/img/siteCover.png')">
                 <nav id="nav">
                     <span id="blog-info">
                         <a href="/" title="BYjintian">
