--- a/about/index.html
+++ b/about/index.html
@@ -180,10 +180,10 @@ document.addEventListener('pjax:send', () => {
 <p>Hexo是一个简单、高效且强大的博客框架，只需要一些环境，就可以在短时间内搭建出一个简易的博客。随后再添加<code>hexo-theme-butterfly</code>主题</p>
 <p>当然，如果你也想搭建一个博客，但是不喜欢这个主题，可以去GitHub上搜索 <code>hexo theme</code> 即可，可以找到许多好看的主题。</p>
 <h2 id="2-2-参考链接"><a class="header-anchor" href="#2-2-参考链接"></a>2.2 参考链接</h2>
-<p><a target="_blank" rel="noopener" href="https://zhuanlan.zhihu.com/p/74778630">不需懂代码，10分钟在Github搭建免费且已成型的个人博客网站</a></p>
+<p><a target="_blank" rel="noopener" href="https://zhuanlan.zhihu.com/p/74778630">Github搭建个人博客网站</a></p>
 <p><a target="_blank" rel="noopener" href="https://github.com/mofan212/mofan212.github.io">Mofan网站代码仓库</a></p>
 <p><a target="_blank" rel="noopener" href="https://blog.csdn.net/weixin_43350051/article/details/104923503">短短1天我学会了如何修改Butterfly的配置文件</a></p>
-<p><a target="_blank" rel="noopener" href="https://www.cnblogs.com/antmoe/p/12846393.html">Hexo博客之butterfly主题优雅魔改系列</a></p>
+<p><a target="_blank" rel="noopener" href="https://zhuanlan.zhihu.com/p/489236769">使用Github+picGo搭建图床</a></p>
 <p>如果你也想搭建一个博客，需要准备以下环境：Node.js、Git，其中Git需要会使用。如果你还想进行魔改，那么一定的HTML + CSS + JS的知识是不可缺少的，至少能看得懂。</p>
 <p>又或者你没有时间/等不及想要先搭建个网站先看看，只需要了解<code>Github</code>的基本应用，Fork别人的模板就可以了。</p>
 <h1 id="3-关于“BYjintian”"><a class="header-anchor" href="#3-关于“BYjintian”"></a>3. 关于“BYjintian”</h1>
