--- a/index.html
+++ b/index.html
@@ -479,7 +479,7 @@
                                 <span class="article-meta">
                                     <span class="article-meta-separator">|</span>
                                     <i class="fas fa-inbox"></i>
-                                    <a class="article-meta__categories" href="/categories/Hexo/">Hexo</a>
+                                    <a class="article-meta__categories" href="/categories">Articles</a>
                                 </span>
                             </div>
                             <div class="content">维护博客时，总会遇到各种问题，有些问题难以找到解决方案，不如将它们记录下来，方便他人参考。</div>
