--- a/index.html
+++ b/index.html
@@ -578,7 +578,7 @@
                     <div class="card-widget card-info">
                         <div class="is-center">
                             <div class="DMtouxiang-img">
-                                <img src="https://cdn.jsdelivr.net/gh/BYjintian/tc@main/img/DMtouxiang.jpg" onerror="this.onerror=null;this.src='/img/friend_404.gif'" alt="DMtouxiang"/>
+                                <img src="img/DMtouxiang.jpg" onerror="this.onerror=null;this.src='/img/friend_404.gif'" alt="DMtouxiang"/>
                             </div>
                             <div class="author-info__name">BY jintian</div>
                             <div class="author-info__description">有生之年，狭路相逢，终不能幸免</div>
