--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
         <meta property="og:site_name" content="BY JINTIAN">
         <meta property="og:description" content="不要问光之战士，那么黑暗的问题">
         <meta property="og:locale" content="zh_CN">
-        <meta property="og:image" content="https://cdn.jsdelivr.net/gh/BYjintian/tc@main/img/DMtouxiang.jpg">
+        <meta property="og:image" content="https://BYJINTIAN-blog-pics.oss-cn-chengdu.aliyuncs.com/myblog/avatar.jpg">
         <meta property="article:author" content="BY JINTIAN">
         <meta property="article:tag" content="BY Jintian,jintian,JINTIAN">
         <meta name="twitter:card" content="summary">
-        <meta name="twitter:image" content="https://cdn.jsdelivr.net/gh/BYjintian/tc@main/img/DMtouxiang.jpg">
+        <meta name="twitter:image" content="https://BYJINTIAN-blog-pics.oss-cn-chengdu.aliyuncs.com/myblog/avatar.jpg">
         <link rel="shortcut icon" href="/img/favicon.png">
         <link rel="canonical" href="https://BYjintian.github.io/index.html">
         <link rel="preconnect" href="//cdn.jsdelivr.net"/>
@@ -266,8 +266,8 @@
         <div id="sidebar">
             <div id="menu-mask"></div>
             <div id="sidebar-menus">
-                <div class="DMtouxiang-img is-center">
-                    <img src="https://cdn.jsdelivr.net/gh/BYjintian/tc@main/img/DMtouxiang.jpg" onerror="onerror=null;src='/img/friend_404.gif'" alt="DMtouxiang"/>
+                <div class="avatar-img is-center">
+                    <img src="https://BYjintian-blog-pics.oss-cn-chengdu.aliyuncs.com/myblog/avatar.jpg" onerror="onerror=null;src='/img/friend_404.gif'" alt="avatar"/>
                 </div>
                 <div class="sidebar-site-data site-data is-center">
                     <a href="/categories/">
@@ -577,8 +577,8 @@
                 <div class="aside-content" id="aside-content">
                     <div class="card-widget card-info">
                         <div class="is-center">
-                            <div class="DMtouxiang-img">
-                                <img src="img/DMtouxiang.jpg" onerror="this.onerror=null;this.src='/img/friend_404.gif'" alt="DMtouxiang"/>
+                            <div class="avatar-img">
+                                <img src="/img/DMtouxiang.jpg" onerror="this.onerror=null;this.src='/img/friend_404.gif'" alt="avatar"/>
                             </div>
                             <div class="author-info__name">BY jintian</div>
                             <div class="author-info__description">有生之年，狭路相逢，终不能幸免</div>
