--- a/link/index.html
+++ b/link/index.html
@@ -376,7 +376,7 @@ document.addEventListener('pjax:send', () => {
 <blockquote>
 <p>我的链接</p>
 </blockquote>
-<figure class="highlight yaml"><table><tr><td class="gutter"><pre><span class="line">1</span><br><span class="line">2</span><br><span class="line">3</span><br><span class="line">4</span><br></pre></td><td class="code"><pre><span class="line"><span class="attr">name:</span> <span class="string">BY jintian</span></span><br><span class="line"><span class="attr">link:</span> <span class="string">https://BYjintian.github.io/</span></span><br><span class="line"><span class="attr">DMtouxiang:</span> <span class="string">https://BYjintian.github.io/img/TX.jpg</span></span><br><span class="line"><span class="attr">descr:</span> <span class="string">我们都是小怪兽，有一天会被正义的奥特曼杀死.</span></span><br></pre></td></tr></table></figure>
+<figure class="highlight yaml"><table><tr><td class="gutter"><pre><span class="line">1</span><br><span class="line">2</span><br><span class="line">3</span><br><span class="line">4</span><br></pre></td><td class="code"><pre><span class="line"><span class="attr">name:</span> <span class="string">BY jintian</span></span><br><span class="line"><span class="attr">link:</span> <span class="string">https://BYjintian.github.io/</span></span><br><span class="line"><span class="attr">DMtouxiang:</span> <span class="string">https://BYjintian.github.io/img/DMtouxiang.jpg</span></span><br><span class="line"><span class="attr">descr:</span> <span class="string">我们都是小怪兽，有一天会被正义的奥特曼杀死.</span></span><br></pre></td></tr></table></figure>
 <h2 id="友链维护记录-📝"><a class="header-anchor" href="#友链维护记录-📝"></a>友链维护记录 📝</h2>
 <ul>
 <li>
